# llms-pattern

./: .env.example  .gitignore  README.md  pyproject.toml
applications/abstract-summary/: llm.py  main.py  parsing-json.py  parsing_json.py  pubmed.py
applications/information-scraper/: main.py  scrape.py
applications/pdf-to-note/: README.md  main.py
applications/soap-note/: assessment.py  cc  main.py  objective_data.py  subjective_data.py
arch-router/: main.py
chat/: chat.py  main.py
evals/: main.py
function-calling/: agentic_loop.py  main.py
multimodality/: main.py
pdf-to-note/: README.md  main.py
structured-output/: main.py
vector-store/: bento_client.py  local_embed.py  main.py  markdown_chunker.py  remote_embed.py  remote_embed_bento.py  remote_embed_openai.py  voyager-rag.py
web-scraper/: main.py  scrape.py
