[project]
name = "llm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.115",
    "markitdown[pdf]>=0.1.2",
    "openai>=1.85.0",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "transformers>=4.52.4",
    "typer>=0.16.0",
]
